refactor to split into client, server, and shared folders

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "files": [],
   "references": [
-    { "path": "./tsconfig.client.json" },
-    { "path": "./tsconfig.server.json" }
+    { "path": "./shared" },
+    { "path": "./client" },
+    { "path": "./server" }
   ]
 }
