--- a/package.json
+++ b/package.json
@@ -15,29 +15,22 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "predev": "node scripts/update-metadata.js && pnpm --filter=@meetup/shared build",
+    "dev": "pnpm --parallel --filter=@meetup/shared --filter=./client --filter=./server dev",
+    "dev:client": "pnpm --filter=./client dev",
+    "dev:server": "pnpm --filter=./server dev",
+    "build": "node scripts/update-metadata.js && pnpm run --filter=@meetup/shared build && pnpm run --filter=./server build && pnpm run --filter=./client build",
+    "db:generate": "pnpm --filter=./server db:generate",
+    "db:push": "pnpm --filter=./server db:push",
+    "db:studio": "pnpm --filter=./server db:studio"
   },
   "dependencies": {
     "@noble/curves": "^2.0.1",
     "base58-universal": "^2.0.0",
     "jwt-decode": "^4.0.0",
-    "qrcode.react": "^4.2.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
-    "irl-browser-simulator": "^1.0.4",
-    "@tailwindcss/vite": "^4.1.16",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.1.0",
-    "@types/node": "^24.6.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
-    "typescript": "~5.9.3",
-    "vite": "^7.1.7"
+    "typescript": "~5.9.3"
   }
 }
