add client to railway config

--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "pnpm install && pnpm --filter @meetup/shared build && pnpm --filter @meetup/server build"
+buildCommand = "pnpm install && pnpm --filter @meetup/shared build && pnpm --filter @meetup/server build && pnpm --filter @meetup/client build"
 
 [deploy]
 startCommand = "node server/dist/index.js"
