--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,6 @@
 buildCommand = "NODE_ENV=production pnpm install && node scripts/update-metadata.js && pnpm --filter @meetup/shared build && pnpm --filter ./server build && pnpm --filter ./client build"
 
 [deploy]
-startCommand = "NODE_ENV=production sh -c "cd /app && pnpm --filter ./server db:push && node server/dist/index.js"
+startCommand = "NODE_ENV=production sh -c 'cd /app && pnpm --filter ./server db:push && node server/dist/index.js'"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
